support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_recursive_typedef.i
%module cpp_recursive_typedef

typedef std::set<pds> pds;

